--- a/orders-dashboard.html
+++ b/orders-dashboard.html
@@ -26,24 +26,41 @@
       width: 8px;
     }
     ::-webkit-scrollbar-track {
-      background: #0f172a; 
+      background: #0f172a;  
     }
     ::-webkit-scrollbar-thumb {
-      background: #334155; 
+      background: #334155;  
       border-radius: 4px;
     }
     ::-webkit-scrollbar-thumb:hover {
-      background: #475569; 
+      background: #475569;  
+    }
+    /* Simple fade-in for notifications */
+    @keyframes bounce-in {
+        0% { transform: scale(0.9) translateY(-10px); opacity: 0; }
+        80% { transform: scale(1.02); opacity: 1; }
+        100% { transform: scale(1) translateY(0); opacity: 1; }
+    }
+    .animate-bounce-in {
+        animation: bounce-in 0.3s ease-out forwards;
+    }
+    @keyframes fade-in {
+        from { opacity: 0; }
+        to { opacity: 1; }
+    }
+    .animate-fade-in {
+        animation: fade-in 0.2s ease-out forwards;
     }
   </style>
   <script type="module">
     // Import Firebase SDK (v9 modular)
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
     import { getAuth, signInWithEmailAndPassword, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
-    import { getFirestore, collection, query, orderBy, onSnapshot } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
+    // ADDED: doc and deleteDoc
+    import { getFirestore, collection, query, orderBy, onSnapshot, doc, deleteDoc } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
 
     // Firebase Config
-   const firebaseConfig = {
+    const firebaseConfig = {
         apiKey: "AIzaSyDcwybZJui1WKAujPclyPgBaj_bE7IK-tg", // <-- PASTE YOUR API KEY HERE
         authDomain: "fourth-gate-microgreens.firebaseapp.com",
         projectId: "fourth-gate-microgreens",
@@ -65,6 +82,13 @@
     const authSection = document.getElementById("auth-section");
     const dashboardSection = document.getElementById("dashboard");
 
+    // NEW: Delete Modal elements
+    const deleteModal = document.getElementById("delete-modal");
+    const modalText = document.getElementById("modal-text");
+    const modalCancelBtn = document.getElementById("modal-cancel");
+    const modalConfirmBtn = document.getElementById("modal-confirm");
+    let orderToDeleteId = null; // To store which order we're deleting
+
     // Global store for order data, accessible by onclick handlers
     window.allOrders = {};
 
@@ -81,7 +105,7 @@
                 console.error("Login failed: " + err.message);
                 const errorEl = document.createElement('div');
                 errorEl.textContent = "Login failed: " + err.message;
-                errorEl.className = "bg-red-900/80 border border-red-700 text-red-200 p-4 rounded-lg fixed top-5 right-5 shadow-xl backdrop-blur-sm animate-fade-in";
+                errorEl.className = "bg-red-900/80 border border-red-700 text-red-200 p-4 rounded-lg fixed top-5 right-5 shadow-xl backdrop-blur-sm animate-fade-in z-50";
                 document.body.appendChild(errorEl);
                 setTimeout(() => errorEl.remove(), 3000);
             }
@@ -107,14 +131,59 @@
       }
     });
 
+    // NEW: Delete Modal Listeners
+    if (modalCancelBtn) {
+        modalCancelBtn.addEventListener("click", () => {
+            deleteModal.classList.add("hidden");
+            orderToDeleteId = null;
+        });
+    }
+
+    if (modalConfirmBtn) {
+        modalConfirmBtn.addEventListener("click", async () => {
+            if (orderToDeleteId) {
+                try {
+                    await deleteDoc(doc(db, "orders", orderToDeleteId));
+                    // Show success notification
+                    const successEl = document.createElement('div');
+                    successEl.textContent = "Order successfully deleted.";
+                    successEl.className = "bg-emerald-900/90 border border-emerald-700 text-emerald-200 p-4 rounded-lg fixed top-5 right-5 shadow-2xl backdrop-blur-md z-50 font-medium animate-bounce-in";
+                    document.body.appendChild(successEl);
+                    setTimeout(() => successEl.remove(), 3000);
+                } catch (err) {
+                    console.error("Error deleting order: ", err);
+                    // Show error notification
+                    const errorEl = document.createElement('div');
+                    errorEl.textContent = "Error deleting order: " + err.message;
+                    errorEl.className = "bg-red-900/80 border border-red-700 text-red-200 p-4 rounded-lg fixed top-5 right-5 shadow-xl backdrop-blur-sm z-50 animate-fade-in";
+                    document.body.appendChild(errorEl);
+                    setTimeout(() => errorEl.remove(), 3000);
+                } finally {
+                    deleteModal.classList.add("hidden");
+                    orderToDeleteId = null;
+                }
+            }
+        });
+    }
+
+    // NEW: Function to show delete confirmation modal
+    window.handleDeleteClick = function(orderId) {
+        orderToDeleteId = orderId;
+        const order = window.allOrders[orderId];
+        if (order && modalText) {
+             modalText.innerHTML = `This will permanently delete the order for <strong class="text-white">${order.customerName || 'this customer'}</strong> (ID: <code class="text-sm bg-slate-700 p-1 rounded">${orderId}</code>).<br><br>This action cannot be undone.`;
+        }
+        deleteModal.classList.remove("hidden");
+    }
+
     // Helper to format timestamp
     function formatDate(timestamp) {
         if (!timestamp) return 'N/A';
         // Handle Firestore Timestamp or standard Date object
         const date = timestamp.toDate ? timestamp.toDate() : new Date(timestamp);
-        return date.toLocaleString('en-US', { 
-            dateStyle: 'medium', 
-            timeStyle: 'short' 
+        return date.toLocaleString('en-US', {  
+            dateStyle: 'medium',  
+            timeStyle: 'short'  
         });
     }
 
@@ -261,6 +330,21 @@
                     <p style="margin-top: 20px; margin-bottom: 20px;">We hope you enjoy your fresh, locally grown greens!</p>
                 ${emailHtmlEnd}
             `;
+        // NEW: Cancellation template
+        } else if (templateType === 'cancel_subscription') {
+            subject = `Your Fourth Gate Microgreens Subscription`;
+            body = `
+                ${emailHtmlStart}
+                <div class="header" style="background-color: #f4f4f4; padding: 20px; text-align: center; border-bottom: 1px solid #ddd;">
+                    <h1 style="color: #2D4026; margin: 0; font-size: 24px;">Subscription Cancellation</h1>
+                </div>
+                <div class="content" style="padding: 30px;">
+                    <p style="margin-bottom: 20px;">Hi ${customerName},</p>
+                    <p style="margin-bottom: 20px;">We're writing to confirm that your subscription for the <strong>${boxType}</strong> has been successfully cancelled at your request.</p>
+                    <p style="margin-bottom: 20px;">You will not be charged for any future orders associated with this subscription. If you have any questions about a final delivery or charge, please don't hesitate to reach out.</p>
+                    <p style="margin-top: 20px; margin-bottom: 20px;">We've enjoyed serving you and hope to see you again in the future!</p>
+                ${emailHtmlEnd}
+            `;
         }
 
         return { subject, body };
@@ -283,7 +367,7 @@
             // You could show a small error message on the UI here
             const errorEl = document.createElement('div');
             errorEl.textContent = "Error: No customer email found for this order.";
-            errorEl.className = "bg-red-900/80 border border-red-700 text-red-200 p-4 rounded-lg fixed top-5 right-5 shadow-xl backdrop-blur-sm z-50";
+            errorEl.className = "bg-red-900/80 border border-red-700 text-red-200 p-4 rounded-lg fixed top-5 right-5 shadow-xl backdrop-blur-sm z-50 animate-fade-in";
             document.body.appendChild(errorEl);
             setTimeout(() => errorEl.remove(), 3000);
             return;
@@ -354,7 +438,7 @@
             console.error("Failed to generate email template:", err);
             const errorEl = document.createElement('div');
             errorEl.textContent = "Error: " + err.message;
-            errorEl.className = "bg-red-900/80 border border-red-700 text-red-200 p-4 rounded-lg fixed top-5 right-5 shadow-xl backdrop-blur-sm z-50";
+            errorEl.className = "bg-red-900/80 border border-red-700 text-red-200 p-4 rounded-lg fixed top-5 right-5 shadow-xl backdrop-blur-sm z-50 animate-fade-in";
             document.body.appendChild(errorEl);
             setTimeout(() => errorEl.remove(), 3000);
         }
@@ -404,8 +488,14 @@
                        <div class="flex items-center gap-3 md:justify-end">
                            <span class="font-bold text-xl text-emerald-400 tracking-tight">$${order.amountTotal ? Number(order.amountTotal).toFixed(2) : '0.00'} <span class="text-xs text-slate-500 font-medium">${currency}</span></span>
                            <span class="px-3 py-1 ${order.paymentStatus === 'paid' ? 'bg-emerald-900/30 text-emerald-400 border-emerald-800' : 'bg-amber-900/30 text-amber-400 border-amber-800'} border rounded-full text-[10px] font-bold uppercase tracking-wider">
-                              ${order.paymentStatus || 'unknown'}
+                             ${order.paymentStatus || 'unknown'}
                            </span>
+                           <!-- NEW: Delete Button -->
+                           <button onclick="handleDeleteClick('${doc.id}')" title="Delete Order" class="text-slate-600 hover:text-red-400 transition-colors p-1.5 rounded-lg hover:bg-red-900/30">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+                                </svg>
+                            </button>
                        </div>
                        <p class="text-xs text-slate-500 mt-1 font-mono">Ordered: ${formatDate(order.createdAt)}</p>
                   </div>
@@ -468,25 +558,25 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
                           </svg>
                           System IDs
-                      </h4>
-                      <div class="bg-slate-900/30 p-4 rounded-lg border border-slate-800 text-xs font-mono text-slate-500 space-y-3 overflow-hidden">
-                          <div>
-                              <span class="font-bold text-slate-600 block uppercase text-[10px] mb-0.5">Firebase Order ID</span>
-                              <span class="break-all select-all text-slate-400 hover:text-emerald-400 cursor-pointer transition-colors">${doc.id}</span>
-                          </div>
-                          <div>
-                              <span class="font-bold text-slate-600 block uppercase text-[10px] mb-0.5">Stripe Session ID</span>
-                              <span class="break-all select-all text-slate-400 hover:text-emerald-400 cursor-pointer transition-colors">${order.stripeSessionId || 'N/A'}</span>
-                          </div>
-                          <div>
-                              <span class="font-bold text-slate-600 block uppercase text-[10px] mb-0.5">Stripe Customer ID</span>
-                              <span class="break-all select-all text-slate-400 hover:text-emerald-400 cursor-pointer transition-colors">${order.stripeCustomerId || 'N/A'}</span>
-                          </div>
+                       </h4>
+                       <div class="bg-slate-900/30 p-4 rounded-lg border border-slate-800 text-xs font-mono text-slate-500 space-y-3 overflow-hidden">
                            <div>
-                              <span class="font-bold text-slate-600 block uppercase text-[10px] mb-0.5">Subscription ID</span>
-                              <span class="break-all select-all text-slate-400 hover:text-emerald-400 cursor-pointer transition-colors">${order.subscriptionId || 'N/A'}</span>
-                          </div>
-                      </div>
+                               <span class="font-bold text-slate-600 block uppercase text-[10px] mb-0.5">Firebase Order ID</span>
+                               <span class="break-all select-all text-slate-400 hover:text-emerald-400 cursor-pointer transition-colors">${doc.id}</span>
+                           </div>
+                           <div>
+                               <span class="font-bold text-slate-600 block uppercase text-[10px] mb-0.5">Stripe Session ID</span>
+                               <span class="break-all select-all text-slate-400 hover:text-emerald-400 cursor-pointer transition-colors">${order.stripeSessionId || 'N/A'}</span>
+                           </div>
+                           <div>
+                               <span class="font-bold text-slate-600 block uppercase text-[10px] mb-0.5">Stripe Customer ID</span>
+                               <span class="break-all select-all text-slate-400 hover:text-emerald-400 cursor-pointer transition-colors">${order.stripeCustomerId || 'N/A'}</span>
+                           </div>
+                            <div>
+                               <span class="font-bold text-slate-600 block uppercase text-[10px] mb-0.5">Subscription ID</span>
+                               <span class="break-all select-all text-slate-400 hover:text-emerald-400 cursor-pointer transition-colors">${order.subscriptionId || 'N/A'}</span>
+                           </div>
+                       </div>
                   </div>
               </div> <!-- End of p-6 grid -->
 
@@ -523,6 +613,15 @@
                           </svg>
                           Delivery Completed
                       </button>
+                      <!-- NEW: Cancel Subscription Button -->
+                      <button 
+                          onclick="handleSendEmail('${doc.id}', 'cancel_subscription')"
+                          class="bg-slate-600/90 hover:bg-slate-500 text-white text-xs font-semibold py-2 px-4 rounded-lg transition-all flex items-center gap-2 shadow-lg shadow-slate-900/20 hover:shadow-slate-900/40 transform hover:-translate-y-0.5">
+                          <svg xmlns="http://www.w3.org/2000/svg" class="h-3 w-3" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                              <path stroke-linecap="round" stroke-linejoin="round" d="M18.364 18.364A9 9 0 005.636 5.636m12.728 12.728A9 9 0 015.636 5.636m12.728 12.728L5.636 5.636" />
+                          </svg>
+                          Cancel Subscription
+                      </button>
                   </div>
               </div>
 
@@ -552,9 +651,9 @@
       <div id="auth-section" class="max-w-md mx-auto bg-slate-800/80 backdrop-blur-md p-10 rounded-2xl shadow-2xl border border-slate-700 mt-20">
         <div class="text-center mb-8">
              <div class="inline-flex items-center justify-center w-16 h-16 rounded-full bg-emerald-900/30 text-emerald-400 mb-4">
-                 <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z" />
-                 </svg>
+               <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z" />
+               </svg>
              </div>
              <h2 class="text-2xl font-bold text-white">Admin Access</h2>
              <p class="text-slate-400 mt-2">Sign in to manage farm orders</p>
@@ -585,5 +684,41 @@
         </div>
       </div>
   </div>
+
+  <!-- NEW: Delete Confirmation Modal -->
+  <div id="delete-modal" class="hidden fixed inset-0 z-50 flex items-center justify-center p-4 animate-fade-in">
+      <!-- Overlay -->
+      <div class="fixed inset-0 bg-black/60 backdrop-blur-sm"></div>
+      
+      <!-- Modal Content -->
+      <div class="relative bg-slate-800 rounded-xl shadow-2xl border border-slate-700 w-full max-w-md p-6">
+          <div class="flex items-start">
+              <div class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-red-900/50 sm:mx-0 sm:h-10 sm:w-10">
+                  <svg class="h-6 w-6 text-red-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+                  </svg>
+              </div>
+              <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
+                  <h3 class="text-lg leading-6 font-bold text-white" id="modal-title">
+                      Delete Order
+                  </h3>
+                  <div class="mt-2">
+                      <p id="modal-text" class="text-sm text-slate-400 leading-relaxed">
+                          Are you sure you want to delete this order? This action cannot be undone.
+                      </p>
+                  </div>
+              </div>
+          </div>
+          <div class="mt-5 sm:mt-4 sm:flex sm:flex-row-reverse gap-3">
+              <button id="modal-confirm" type="button" class="w-full inline-flex justify-center rounded-lg border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:ml-3 sm:w-auto sm:text-sm transition-colors">
+                  Confirm Delete
+              </button>
+              <button id="modal-cancel" type="button" class="mt-3 w-full inline-flex justify-center rounded-lg border border-slate-600 shadow-sm px-4 py-2 bg-slate-700 text-base font-medium text-slate-200 hover:bg-slate-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-slate-500 sm:mt-0 sm:w-auto sm:text-sm transition-colors">
+                  Cancel
+              </button>
+          </div>
+      </div>
+  </div>
+
 </body>
 </html>
